branches/5.1:

Merge a change from MySQL:

  ------------------------------------------------------------
  revno: 2728.19.1
  committer: Alfranio Correia <alfranio.correia@sun.com>
  branch nick: mysql-5.1-bugteam
  timestamp: Tue 2009-02-03 11:36:46 +0000
  message:
    BUG#42445 Warning messages in innobase/handler/ha_innodb.cc
          
    There was a type casting problem in the storage/innobase/handler/ha_innodb.cc,
    (int ha_innobase::write_row(...)). Innobase uses has an internal error variable
    of type 'ulint' while mysql uses an 'int'. 
          
    To fix the problem the function manipulates an error variable of
    type 'ulint' and only casts it into 'int' when needs to return the value.
  modified:
    storage/innobase/handler/ha_innodb.cc